[package]
name = "weather_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
reqwest = {version = "0.12.4", features = ["blocking","json"]}
serde_json = "1.0.116"
colored = "2.1.0"